// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`broken-html.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- 
#7241, 
reproduction:
two different element,
linebreak
\`<\`
extra space(s)
-->
<div><span>



<                                           

=====================================output=====================================
<!-- 
#7241, 
reproduction:
two different element,
linebreak
\`<\`
extra space(s)
-->
<div><span> < </span></div>

================================================================================
`;

exports[`comment.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!--hello world-->

=====================================output=====================================
<!--hello world-->

================================================================================
`;

exports[`empty.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`empty-doc.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<html>
<head></head>
<body></body>
</html>

=====================================output=====================================
<!DOCTYPE html>
<html>
  <head></head>
  <body></body>
</html>

================================================================================
`;

exports[`form.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<form>
  <div class="form-group">
    <label for="exampleInputEmail1">Email address</label>
    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
  </div>
  <div class="form-group">
    <label for="exampleInputPassword1">Password</label>
    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
  </div>
  <div class="form-group">
    <label for="exampleSelect1">Example select</label>
    <select class="form-control" id="exampleSelect1">
      <option>1</option>
      <option>2</option>
      <option>3</option>
      <option>4</option>
      <option>5</option>
    </select>
  </div>
  <div class="form-group">
    <label for="exampleSelect2">Example multiple select</label>
    <select multiple class="form-control" id="exampleSelect2">
      <option>1</option>
      <option>2</option>
      <option>3</option>
      <option>4</option>
      <option>5</option>
    </select>
  </div>
  <div class="form-group">
    <label for="exampleTextarea">Example textarea</label>
    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
  </div>
  <div class="form-group">
    <label for="exampleInputFile">File input</label>
    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
    <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
  </div>
  <fieldset class="form-group">
    <legend>Radio buttons</legend>
    <div class="form-check">
      <label class="form-check-label">
        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
        Option one is this and that&mdash;be sure to include why it's great
      </label>
    </div>
    <div class="form-check">
      <label class="form-check-label">
        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
        Option two can be something else and selecting it will deselect option one
      </label>
    </div>
    <div class="form-check disabled">
      <label class="form-check-label">
        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
        Option three is disabled
      </label>
    </div>
  </fieldset>
  <div class="form-check">
    <label class="form-check-label">
      <input type="checkbox" class="form-check-input">
      Check me out
    </label>
  </div>
  <button type="submit" class="btn btn-primary">Submit</button>
</form>

=====================================output=====================================
<form>
  <div class="form-group">
    <label for="exampleInputEmail1">Email address</label>
    <input
      type="email"
      class="form-control"
      id="exampleInputEmail1"
      aria-describedby="emailHelp"
      placeholder="Enter email"
    />
    <small id="emailHelp" class="form-text text-muted"
      >We'll never share your email with anyone else.</small
    >
  </div>
  <div class="form-group">
    <label for="exampleInputPassword1">Password</label>
    <input
      type="password"
      class="form-control"
      id="exampleInputPassword1"
      placeholder="Password"
    />
  </div>
  <div class="form-group">
    <label for="exampleSelect1">Example select</label>
    <select class="form-control" id="exampleSelect1">
      <option>1</option>
      <option>2</option>
      <option>3</option>
      <option>4</option>
      <option>5</option>
    </select>
  </div>
  <div class="form-group">
    <label for="exampleSelect2">Example multiple select</label>
    <select multiple class="form-control" id="exampleSelect2">
      <option>1</option>
      <option>2</option>
      <option>3</option>
      <option>4</option>
      <option>5</option>
    </select>
  </div>
  <div class="form-group">
    <label for="exampleTextarea">Example textarea</label>
    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
  </div>
  <div class="form-group">
    <label for="exampleInputFile">File input</label>
    <input
      type="file"
      class="form-control-file"
      id="exampleInputFile"
      aria-describedby="fileHelp"
    />
    <small id="fileHelp" class="form-text text-muted"
      >This is some placeholder block-level help text for the above input. It's
      a bit lighter and easily wraps to a new line.</small
    >
  </div>
  <fieldset class="form-group">
    <legend>Radio buttons</legend>
    <div class="form-check">
      <label class="form-check-label">
        <input
          type="radio"
          class="form-check-input"
          name="optionsRadios"
          id="optionsRadios1"
          value="option1"
          checked
        />
        Option one is this and that&mdash;be sure to include why it's great
      </label>
    </div>
    <div class="form-check">
      <label class="form-check-label">
        <input
          type="radio"
          class="form-check-input"
          name="optionsRadios"
          id="optionsRadios2"
          value="option2"
        />
        Option two can be something else and selecting it will deselect option
        one
      </label>
    </div>
    <div class="form-check disabled">
      <label class="form-check-label">
        <input
          type="radio"
          class="form-check-input"
          name="optionsRadios"
          id="optionsRadios3"
          value="option3"
          disabled
        />
        Option three is disabled
      </label>
    </div>
  </fieldset>
  <div class="form-check">
    <label class="form-check-label">
      <input type="checkbox" class="form-check-input" />
      Check me out
    </label>
  </div>
  <button type="submit" class="btn btn-primary">Submit</button>
</form>

================================================================================
`;

exports[`hello-world.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
</head>
<body>
    <!-- A comment -->
    <h1>Hello World</h1>
</body>
</html>


=====================================output=====================================
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
    <title>Document</title>
  </head>
  <body>
    <!-- A comment -->
    <h1>Hello World</h1>
  </body>
</html>

================================================================================
`;

exports[`html-comments.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- htmlhint attr-lowercase: false -->
<html>
  <body>
    <a href="#">Anchor</a>
    <div hidden class="foo" id=bar></div>
  </body>
</html>

=====================================output=====================================
<!-- htmlhint attr-lowercase: false -->
<html>
  <body>
    <a href="#">Anchor</a>
    <div hidden class="foo" id="bar"></div>
  </body>
</html>

================================================================================
`;

exports[`html5-boilerplate.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<html class="no-js" lang="">

  <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
    <title></title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">

    <link rel="manifest" href="site.webmanifest">
    <link rel="apple-touch-icon" href="icon.png">
    <!-- Place favicon.ico in the root directory -->

    <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/main.css">
  </head>

  <body>
    <!--[if lte IE 9]>
    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
    <![endif]-->

    <!-- Add your site or application content here -->
    <p>Hello world! This is HTML5 Boilerplate.</p>
    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\\/script>')</script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>

    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
    <script>
      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
      ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
    </script>
    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
  </body>

</html>

=====================================output=====================================
<!DOCTYPE html>
<html class="no-js" lang="">
  <head>
    <meta charset="utf-8" />
    <meta http-equiv="x-ua-compatible" content="ie=edge" />
    <title></title>
    <meta name="description" content="" />
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1, shrink-to-fit=no"
    />

    <link rel="manifest" href="site.webmanifest" />
    <link rel="apple-touch-icon" href="icon.png" />
    <!-- Place favicon.ico in the root directory -->

    <link rel="stylesheet" href="css/normalize.css" />
    <link rel="stylesheet" href="css/main.css" />
  </head>

  <body>
    <!--[if lte IE 9]>
      <p class="browserupgrade">
        You are using an <strong>outdated</strong> browser. Please
        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
        your experience and security.
      </p>
    <![endif]-->

    <!-- Add your site or application content here -->
    <p>Hello world! This is HTML5 Boilerplate.</p>
    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
    <script
      src="https://code.jquery.com/jquery-3.3.1.min.js"
      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
      crossorigin="anonymous"
    ></script>
    <script>
      window.jQuery ||
        document.write(
          '<script src="js/vendor/jquery-3.3.1.min.js"><\\/script>'
        );
    </script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>

    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
    <script>
      window.ga = function () {
        ga.q.push(arguments);
      };
      ga.q = [];
      ga.l = +new Date();
      ga("create", "UA-XXXXX-Y", "auto");
      ga("send", "pageview");
    </script>
    <script
      src="https://www.google-analytics.com/analytics.js"
      async
      defer
    ></script>
  </body>
</html>

================================================================================
`;

exports[`issue-9368.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<strong>a</strong>-&gt;<strong>b</strong>-&gt;

=====================================output=====================================
<strong>a</strong>-&gt;<strong>b</strong>-&gt;

================================================================================
`;

exports[`issue-9368-2.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<strong>a</strong>-<strong>b</strong>-

=====================================output=====================================
<strong>a</strong>-<strong>b</strong>-

================================================================================
`;

exports[`issue-9368-3.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a track<strong>pad</strong>, or a <strong>gyro</strong>scope.

=====================================output=====================================
a track<strong>pad</strong>, or a <strong>gyro</strong>scope.

================================================================================
`;

exports[`more-html.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<html>
<head></head>
<body>
    <a href="#">Anchor</a>
    <div hidden class="foo" id=bar></div>
</body>
</html>

=====================================output=====================================
<html>
  <head></head>
  <body>
    <a href="#">Anchor</a>
    <div hidden class="foo" id="bar"></div>
  </body>
</html>

================================================================================
`;

exports[`void-elements.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<html>
<head>
  <meta charset="UTF-8">
  <link rel="stylesheet" href="code-guide.css">
</head>
<body></body>
</html>

=====================================output=====================================
<html>
  <head>
    <meta charset="UTF-8" />
    <link rel="stylesheet" href="code-guide.css" />
  </head>
  <body></body>
</html>

================================================================================
`;

exports[`void-elements-2.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<video controls width="250">
    <source src="/media/examples/flower.webm"
            type="video/webm">
    <source src="/media/examples/flower.mp4"
            type="video/mp4"
></video>text after

<!-- #8626 -->
<object data="horse.wav"><param name="autoplay" value="true"
><param name="autoplay" value="true"
></object>1

<span><img  src="1.png"
><img src="1.png"
></span>1

=====================================output=====================================
<video controls width="250">
  <source src="/media/examples/flower.webm" type="video/webm" />
  <source src="/media/examples/flower.mp4" type="video/mp4" /></video
>text after

<!-- #8626 -->
<object data="horse.wav">
  <param name="autoplay" value="true" />
  <param name="autoplay" value="true" /></object
>1

<span><img src="1.png" /><img src="1.png" /></span>1

================================================================================
`;

exports[`with-colon.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- unknown tag with colon -->
<div>
<foo:bar>
<div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
<pre> pre pr
e</pre>
<textarea> pre-wrap pr
e-wrap </textarea>
<span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
<span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
<html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
<html:pre> pre pr
e</html:pre>
<html:textarea> pre-wrap pr
e-wrap </html:textarea>
<html:span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </html:span>
<html:span> inline </html:span><html:span> inline </html:span> <html:span> inline </html:span><html:span> inline </html:span></foo:bar>
</div>

<!-- block tag with colon -->
<div>
<foo:div>
<div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
<pre> pre pr
e</pre>
<textarea> pre-wrap pr
e-wrap </textarea>
<span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
<span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
<html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
<html:pre> pre pr
e</html:pre>
<html:textarea> pre-wrap pr
e-wrap </html:textarea>
<html:span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </html:span>
<html:span> inline </html:span><html:span> inline </html:span> <html:span> inline </html:span><html:span> inline </html:span></foo:div>
</div>

<!-- inline tag with colon -->
<div>
<foo:span>
<div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
<pre> pre pr
e</pre>
<textarea> pre-wrap pr
e-wrap </textarea>
<span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
<span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
<html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
<html:pre> pre pr
e</html:pre>
<html:textarea> pre-wrap pr
e-wrap </html:textarea>
<html:span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </html:span>
<html:span> inline </html:span><html:span> inline </html:span> <html:span> inline </html:span><html:span> inline </html:span></foo:span>
</div>

<!-- unknown -->
<div>
<foo-bar>
<div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
<pre> pre pr
e</pre>
<textarea> pre-wrap pr
e-wrap </textarea>
<span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
<span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
<html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
<html:pre> pre pr
e</html:pre>
<html:textarea> pre-wrap pr
e-wrap </html:textarea>
<html:span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </html:span>
<html:span> inline </html:span><html:span> inline </html:span> <html:span> inline </html:span><html:span> inline </html:span></foo-bar>
</div>

<!-- without colon -->
<div>
<div>
<div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
<pre> pre pr
e</pre>
<textarea> pre-wrap pr
e-wrap </textarea>
<span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
<span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
<html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
<html:pre> pre pr
e</html:pre>
<html:textarea> pre-wrap pr
e-wrap </html:textarea>
<html:span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </html:span>
<html:span> inline </html:span><html:span> inline </html:span> <html:span> inline </html:span><html:span> inline </html:span></div>
</div>

<!-- #7236 -->
<with:colon>
  <div><h1> text  text  text  text  text  text  text  text  text  text  text  text  text  text </h1></div>
  <script>
  const func = function() { console.log('Hello, there');}
  </script>
  </with:colon>

<!-- script like -->
<with:colon>
<style>.a{color:#f00}</style>
  <SCRIPT>
  const func = function() { console.log('Hello, there');}
  </SCRIPT>
<STYLE>.A{COLOR:#F00}</STYLE>
<html:script>const func = function() { console.log('Hello, there');}</html:script>
<html:style>.a{color:#f00}</html:style>
<svg><style>.a{color:#f00}</style></svg>
<svg><style>.a{color:#f00}</style></svg>
</with:colon>
<html:script>const func = function() { console.log('Hello, there');}</html:script>
<html:style>.a{color:#f00}</html:style>

=====================================output=====================================
<!-- unknown tag with colon -->
<div>
  <foo:bar>
    <div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </div>
    <div>block</div>
    <div>BLOCK</div>
    <div>block</div>
    <div>block</div>
    <div>block</div>
    <pre>
 pre pr
e</pre
    >
    <textarea>
 pre-wrap pr
e-wrap </textarea
    >
    <span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </span>
    <span> inline </span><span> inline </span> <span> inline </span
    ><span> inline </span>
    <html:div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </html:div>
    <html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV>
    <html:div> block </html:div><html:div> block </html:div
    ><html:div> block </html:div>
    <html:pre> pre pr e</html:pre>
    <html:textarea> pre-wrap pr e-wrap </html:textarea>
    <html:span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </html:span>
    <html:span> inline </html:span><html:span> inline </html:span>
    <html:span> inline </html:span><html:span> inline </html:span></foo:bar
  >
</div>

<!-- block tag with colon -->
<div>
  <foo:div>
    <div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </div>
    <div>block</div>
    <div>BLOCK</div>
    <div>block</div>
    <div>block</div>
    <div>block</div>
    <pre>
 pre pr
e</pre
    >
    <textarea>
 pre-wrap pr
e-wrap </textarea
    >
    <span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </span>
    <span> inline </span><span> inline </span> <span> inline </span
    ><span> inline </span>
    <html:div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </html:div>
    <html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV>
    <html:div> block </html:div><html:div> block </html:div
    ><html:div> block </html:div>
    <html:pre> pre pr e</html:pre>
    <html:textarea> pre-wrap pr e-wrap </html:textarea>
    <html:span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </html:span>
    <html:span> inline </html:span><html:span> inline </html:span>
    <html:span> inline </html:span><html:span> inline </html:span></foo:div
  >
</div>

<!-- inline tag with colon -->
<div>
  <foo:span>
    <div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </div>
    <div>block</div>
    <div>BLOCK</div>
    <div>block</div>
    <div>block</div>
    <div>block</div>
    <pre>
 pre pr
e</pre
    >
    <textarea>
 pre-wrap pr
e-wrap </textarea
    >
    <span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </span>
    <span> inline </span><span> inline </span> <span> inline </span
    ><span> inline </span>
    <html:div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </html:div>
    <html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV>
    <html:div> block </html:div><html:div> block </html:div
    ><html:div> block </html:div>
    <html:pre> pre pr e</html:pre>
    <html:textarea> pre-wrap pr e-wrap </html:textarea>
    <html:span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </html:span>
    <html:span> inline </html:span><html:span> inline </html:span>
    <html:span> inline </html:span><html:span> inline </html:span></foo:span
  >
</div>

<!-- unknown -->
<div>
  <foo-bar>
    <div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </div>
    <div>block</div>
    <div>BLOCK</div>
    <div>block</div>
    <div>block</div>
    <div>block</div>
    <pre>
 pre pr
e</pre
    >
    <textarea>
 pre-wrap pr
e-wrap </textarea
    >
    <span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </span>
    <span> inline </span><span> inline </span> <span> inline </span
    ><span> inline </span>
    <html:div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </html:div>
    <html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV>
    <html:div> block </html:div><html:div> block </html:div
    ><html:div> block </html:div>
    <html:pre> pre pr e</html:pre>
    <html:textarea> pre-wrap pr e-wrap </html:textarea>
    <html:span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </html:span>
    <html:span> inline </html:span><html:span> inline </html:span>
    <html:span> inline </html:span><html:span> inline </html:span></foo-bar
  >
</div>

<!-- without colon -->
<div>
  <div>
    <div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </div>
    <div>block</div>
    <div>BLOCK</div>
    <div>block</div>
    <div>block</div>
    <div>block</div>
    <pre>
 pre pr
e</pre
    >
    <textarea>
 pre-wrap pr
e-wrap </textarea
    >
    <span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </span>
    <span> inline </span><span> inline </span> <span> inline </span
    ><span> inline </span>
    <html:div>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
    </html:div>
    <html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV>
    <html:div> block </html:div><html:div> block </html:div
    ><html:div> block </html:div>
    <html:pre> pre pr e</html:pre>
    <html:textarea> pre-wrap pr e-wrap </html:textarea>
    <html:span>
      looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
    </html:span>
    <html:span> inline </html:span><html:span> inline </html:span>
    <html:span> inline </html:span><html:span> inline </html:span>
  </div>
</div>

<!-- #7236 -->
<with:colon>
  <div>
    <h1>
      text text text text text text text text text text text text text text
    </h1>
  </div>
  <script>
    const func = function () {
      console.log("Hello, there");
    };
  </script>
</with:colon>

<!-- script like -->
<with:colon>
  <style>
    .a {
      color: #f00;
    }
  </style>
  <script>
    const func = function () {
      console.log("Hello, there");
    };
  </script>
  <style>
    .A {
      color: #f00;
    }
  </style>
  <html:script
    >const func = function() { console.log('Hello, there');}</html:script
  >
  <html:style
    >.a{color:#f00}</html:style
  >
  <svg>
    <style>
      .a {
        color: #f00;
      }
    </style>
  </svg>
  <svg>
    <style>
      .a {
        color: #f00;
      }
    </style>
  </svg>
</with:colon>
<html:script
  >const func = function() { console.log('Hello, there');}</html:script
>
<html:style
  >.a{color:#f00}</html:style
>

================================================================================
`;
